--- a/env.development.yaml
+++ b/env.development.yaml
@@ -24,10 +24,10 @@ swagger:
 
 mailer:
   auth:
-    user: 'huyluanvan2802@gmail.com'
-    pass: 'ozbj mfle zdue mart'
+    user: 'tiendungshoplaptop@gmail.com'
+    pass: 'sbvq ttgs ncfk mjth'
   host: 'smtp.gmail.com'
-  transport: 'smtp://huyluanvan2802@gmail.com:Thanhhuy1@smtp.gmail.com'
+  transport: 'smtp://tiendungshoplaptop@gmail.com:dungnguyen080101@smtp.gmail.com'
 
 cache:
   ttl: 12000 # 1000 * 60 * 2
